# silvia-control

./: .gitignore  pyproject.toml
silvia_control/: brew.py  brew_profiles.py  devices.py  main.py  mqtt.py
