[tool.poetry]
name = "silvia_control"
version = "0.1.0"
description = ""
authors = ["Robert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.4.5"
pigpio = "^1.78"
adafruit-circuitpython-ads1x15 = "^2.2.25"
rpi-gpio = "^0.7.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
